<resources>
    <!--Main Menu resources-->
    <string name="helpRight">Press button in the same direction with black arrows</string>
    <string name="helpLeft">Press button in the opposite direction with blue arrows</string>
    <string name="play">Play</string>

    <!--Settings Menu resources-->
    <string name="volume">Volume</string>

    <!--Shared resources-->
    <string name="app_name">Arrows Game by KeyZJ©</string>
    <string name="backToMenu">Main menu</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="score">Score: 0</string>
    <string name="fScore">Score: %1$d</string>

    <!--Game Activity resources-->
    <string name="pause">Pause</string>
    <string name="turn">Turn: 0</string>
    <string name="fTurn">Turn: %1$d</string>

    <!--Game Over Menu resources-->
    <string name="tryAgain">Try again</string>

    <!--Pause Menu resources-->
    <string name="paused">Paused</string>
    <string name="resume">Resume</string>
</resources>
