<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_parent"
    android:orientation="vertical">

    <TextView
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        style="@style/CleanOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpRight"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:cropToPadding="true"
        android:padding="4dp"
        android:scaleType="fitStart"
        android:src="@drawable/arrow_right" />

    <TextView
        style="@style/CleanOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpLeft"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:cropToPadding="true"
        android:padding="4dp"
        android:scaleType="fitEnd"
        android:src="@drawable/arrow_invs_left" />

    <Button
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFCA28"
        android:onClick="startGame"
        android:text="@string/play"
        android:textColor="#FFFFFF" />

    <Button
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFCA28"
        android:onClick="showLeaderboard"
        android:text="@string/leaderboard"
        android:textColor="#FFFFFF" />

    <Button
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:onClick="showSettings"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textStyle="bold" />
</LinearLayout>
