<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FFB300"
    android:orientation="vertical">

    <TextView
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/paused"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_pause_black_24dp" />

    <TextView
        android:id="@+id/pause_results"
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="resumeGame"
        android:text="@string/resume"
        android:textColor="#FFFFFF" />

    <Button
        style="@style/CleanOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="backToMainMenu"
        android:text="@string/backToMenu"
        android:textColor="#FFFFFF" />
</LinearLayout>
